@@ -42,7 +42,7 @@ import static java.lang.Integer.MIN_VALUE;
 /**
  * Mappers to dataframes.
  *
- * @author Sylvain Leclerc <sylvain.leclerc at rte-france.com>
+ * @author Sylvain Leclerc {@literal <sylvain.leclerc at rte-france.com>}
  */
 public final class Dataframes {
 
@@ -310,18 +310,19 @@ public final class Dataframes {
         return nodes.stream().map(node -> {
             Terminal terminal = nodeBreakerView.getTerminal(node);
             if (terminal == null) {
-                return new NodeContext(node, null);
+                return new NodeContext(node, null, null);
             } else {
-                return new NodeContext(node, terminal.getConnectable().getId());
+                return new NodeContext(node, terminal.getConnectable().getId(), terminal.getConnectable().getType());
             }
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     private static DataframeMapper<VoltageLevel.NodeBreakerView, Void> createNodeBreakerViewNodes() {
         return new DataframeMapperBuilder<VoltageLevel.NodeBreakerView, NodeContext, Void>()
                 .itemsProvider(Dataframes::getNodeBreakerViewNodes)
-                .intsIndex("node", NodeContext::getNode)
-                .strings("connectable_id", node -> Objects.toString(node.getConnectableId(), ""))
+                .intsIndex("node", NodeContext::node)
+                .strings("connectable_id", node -> Objects.toString(node.connectableId(), ""))
+                .strings("connectable_type", node -> Objects.toString(node.connectableType(), ""))
                 .build();
     }
 
@@ -363,15 +364,9 @@ public final class Dataframes {
     }
 
     private static List<BusBreakerViewBusData> getBusBreakerViewBuses(VoltageLevel voltageLevel) {
-        return voltageLevel.getBusBreakerView().getBusStream().map(bus -> {
-            Bus busViewBus = bus.getConnectedTerminalStream()
-                    .map(t -> t.getBusView().getBus())
-                    .filter(Objects::nonNull)
-                    .findFirst()
-                    .orElse(null);
-            return new BusBreakerViewBusData(bus, busViewBus);
-        }).collect(Collectors.toList());
-
+        return voltageLevel.getBusBreakerView().getBusStream()
+                .map(bus -> new BusBreakerViewBusData(bus, NetworkUtil.getBusViewBus(bus).orElse(null)))
+                .toList();
     }
 
     private static DataframeMapper<VoltageLevel, Void> createBusBreakerViewBuses() {
